# cursor-begone

./: .gitignore  CMakeLists.txt  LICENSE  README.md  build.bat  cursor_hider.cpp  cursor_hider.rc
tools/: make_icon.py
